# CharLab

./: .gitignore  .tool-versions  README.md  biome.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  webpack.config.js  webpack.main.config.js  webpack.renderer.config.js
.github/workflows/: release.yml
.husky/: pre-commit
doc/: pre_process.md  settings.md
pre_process/: extract.py  pyproject.toml  trim.py
public/: index.html  menu.html
src/common/: type.ts
src/main/: image_loader.ts  main.ts  settings.ts
src/main/windows/: contextWindow.ts  mainWindow.ts  settingsWindow.ts  utils.ts
src/preload/: preload.ts
src/renderer/: App.tsx  declarations.d.ts  index.html  index.tsx  renderer.ts
src/renderer/apps/MainApp/: App.tsx  index.tsx  style.module.css
src/renderer/apps/MenuApp/: App.tsx  inex.tsx  style.module.css
src/renderer/apps/SettingApp/: App.tsx
src/renderer/apps/SettingsApp/: App.tsx  index.tsx  style.module.css
src/renderer/components/ContextMenu/: index.tsx
src/renderer/components/ViewerCanvas/: AutoPlayHook.ts  index.tsx  style.module.css  types.ts
src/renderer/hooks/: useImageCanvas.ts  useSettingsSync.ts
src/renderer/styles/: global.css  tailwind.css
