[project]
name = "pre-process"
version = "0.1.0"
description = ""
authors = [
    {name = "TenTakano",email = "takano20771@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "rembg (>=2.0.65,<3.0.0)",
    "onnxruntime (>=1.21.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
